force-app/main/StockSolution/objects/Account/fields/Last_Stock_Installed_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Stock_Installed_Date__c</fullName>
    <label>Last Stock Installed Date</label>
    <type>Date</type>
</CustomField>