force-app/main/StockSolution/objects/Account/fields/Reserved_Price__c.field-meta.xml
<CustomField>
    <fullName>Reserved_Price__c</fullName>
    <label>Reserved Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>