force-app/main/StockSolution/objects/Account/fields/Stock_Reserved__c.field-meta.xml
<CustomField>
    <fullName>Stock_Reserved__c</fullName>
    <label>Stock Reserved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>