force-app/main/StockSolution/objects/Account/fields/Total_Owned_Stock__c.field-meta.xml
<CustomField>
    <fullName>Total_Owned_Stock__c</fullName>
    <label>Total Owned Stock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>